--- a/assets/css/m-q.css
+++ b/assets/css/m-q.css
@@ -71,7 +71,7 @@
   .section-3{
     word-wrap: break-word;
     text-align: center;
-    background: red;
+    background: ;
     justify-content: center;
     overflow: hidden;
     width: auto;
@@ -94,7 +94,7 @@
     width: 89%;
     padding-top: 23px;
     margin-right: 23px;
-    border: 2px solid red;
+    border: 2px solid brown;
   }
   .btn{
     margin-top: 20px;
