--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -13,10 +13,8 @@ a{
   text-decoration: none;
   color: #000000;
 }
-.container{
-  
-}
 
+/* Header Styling */
 .top-header{
   background-color: #15598f;
   overflow: hidden;
@@ -53,6 +51,7 @@ a{
   background-image:linear-gradient(234deg, green, yellow) ;
 }
 
+/*  Animation Styling */
 .tiny{
   font-size:16px !important;
   /* display: none; */
@@ -89,6 +88,9 @@ a{
 .r{color: rgb(114, 35, 35);}
 
 .p{color:pink}
+
+/* End of Animation Styling */
+
 
 .top-link ul{
   list-style: none;
@@ -137,7 +139,6 @@ a{
   font-size: 2.72rem;
   font-weight: -100;
   font: x-large;
-  /* color: #3a4145; */
   padding: 23px;
 }
 
@@ -157,8 +158,7 @@ a{
 
 .section-two{
   position: relative;
-  top: 141px;
-  /* display: none; */
+  top: 100px;
 }
 
 .intro-1 .section-two strong{
@@ -175,7 +175,6 @@ a{
 
 .me{
   display: flex;
-  /* justify-content: center; */
 }
 
 .me img{
