--- a/assets/css/m-q.css
+++ b/assets/css/m-q.css
@@ -71,7 +71,7 @@
   .section-3{
     word-wrap: break-word;
     text-align: center;
-    background: red;
+    background: ;
     justify-content: center;
     overflow: hidden;
     width: auto;
