Added Contact Me Section

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -54,7 +54,7 @@ a{
 /*  Animation Styling */
 .tiny{
   font-size:16px !important;
-  /* display: none; */
+  display: none;
   transition: all 9s ease;
   color: transparent !important;
 
@@ -254,25 +254,25 @@ a{
 }
 /* Social Link Styles End */
 
-.form{
+.subscribe-form{
   display: flex;
   gap: 6px;
   padding-left: 1rem !important;
   padding-top: -23px;
   margin-bottom: 23px;
 }
-.form span{
+.subscribe-form span{
   font-size: 21px;
   padding: 12px;
 }
 
-.form input{
+.subscribe-form input{
   padding: 9px 12px;
   font-size:26px;
   border-color: brown;
 }
 
-.form input:focus{
+.subscribe-form input:focus{
   background-color: #333;
   color:#fff;
   border: none;
@@ -280,7 +280,7 @@ a{
 
 }
 
-.btn{
+.subscribe-btn{
   margin-top: 25px;
   border: none;
   background-color: rgb(187, 93, 93);
@@ -294,7 +294,7 @@ a{
   border-width: none;
 }
 
-.btn:hover{
+.subscribe-btn:hover{
   background-color: #333;
   color: #fff;
 }
@@ -319,6 +319,79 @@ footer{
 
 .skill-toggle{
   display: block;
+}
+
+
+
+/* Subscribe Section */
+.contact-form-heading{
+  font-size: 3rem;
+  color: rgb(63, 57, 150);
+  font-weight: 600;
+  position: relative;
+  bottom: 90px;
+  left: 50%;
+}
+
+.contact-form{
+  box-shadow: 2px 2px 12px rgba(0,0,0,0.2);
+  background-color: rgb(147, 142, 221);
+  padding: 29px;
+  display: flex;
+  flex-direction: row;
+  height: 110vh;
+  
+  align-items: center;
+  justify-content: center;
+}
+
+.contact-form-section-1 input[type=text],
+.contact-form-section-1 input[type=email]{
+  font-family: cursive;
+  height: 98px;
+  /* margin: 30px; */
+  border-bottom: 1px solid #15598f;
+  /* border: none; */
+  flex-wrap: nowrap;
+  font-size: 23px;
+  padding: 7px;
+  margin-right: 23px;
+
+}
+.contact-form-section-2 .message{
+  font-family: cursive;
+  width: 270px;
+  max-width: 300px;
+  height: 190px;
+  max-height: 200px;
+  border: none;
+  padding: 12px 12px 0px 10px;
+  margin-top: 54px;
+  font-size: 19px;
+  text-transform: capitalize;
+}
+
+.contact-btn{
+  flex-wrap: nowrap;
+  padding: 20px 23px;
+  font-size: 20px;
+  position: relative;
+  top: 180px;
+  right: 273px;
+  flex-direction: column;
+  border: none;
+  border-radius: 4px;
+  background-color: rgb(124, 115, 241);
+  color: white;
+  cursor: pointer;
+  opacity: 1;
+  font-weight: 700;
+  font-family: monospace;
+}
+
+.contact-btn:hover{ 
+  color: white;
+  opacity: 0.8;
 }
 
 
