--- a/assets/css/m-q.css
+++ b/assets/css/m-q.css
@@ -1,14 +1,15 @@
 @media only screen and (max-width: 768px) {
   .container{
+    /* height: 70vh; */
     display: flex;
     flex-direction: column;
     justify-items: center;
     align-content: center;
     align-items: center;
+    flex-wrap: nowrap;
   }
   .top h1{
-    height: 15vh;
-    color: transparent;
+    display: none;
   }
     
   .top-link{
@@ -58,7 +59,7 @@
   .me{
     flex-direction: column;
     width: 100%;
-    padding:0px;
+    /* padding:0px; */
   }
 
   .me img{
@@ -68,40 +69,104 @@
     margin-left: auto;
     width: 90%;
   }
+
   .section-3{
-    word-wrap: break-word;
+    width: 100%;
+    height: 100%;
+    text-align:center;
+    left: 0rem;
+    top: 0rem;
+  }
+
+  .section-3 strong{
+    display: contents;
     text-align: center;
     background: ;
     justify-content: center;
-    overflow: hidden;
-    width: auto;
+    width: 50px;
+    font-size: 20px;
+  }
+
+  .section-3 span{
+    display: contents;
   }
 
   .my_links{
     display: flex;
     flex-direction: column;
-    top: 90px;
     justify-content: center;
     align-items: center;
     align-content: center;
     justify-items: center;
-    padding: 50px;
-    row-gap: 23px;
+    padding: 4px;
     font-size: 20px;
+    padding-left: 46px;
+    gap: 12px;
   }
 
-  .form input{
+  .subscribe-form input{
     width: 89%;
     padding-top: 23px;
-    margin-right: 23px;
+    padding-right: 29px;
     border: 2px solid brown;
+    
   }
-  .btn{
+  .subscribe-btn{
     margin-top: 20px;
     display: block;
     margin-right: auto;
-    margin-left: 53px;
+    margin-left: auto;
     border-radius: 6px;
     background-color: burlywood;
   }
+
+
+
+
+  
+
+/* Subscribe Section */
+.contact-form-heading{
+  font-size: 2rem;
+  color: rgb(63, 57, 150);
+  font-weight: 600;
+  bottom: 10px;
+  left: 20%;
+}
+
+.contact-form{
+  box-shadow: 2px 2px 12px rgba(0,0,0,0.2);
+  background-color: rgb(147, 142, 221);
+  padding: 12px;
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+  width: 100%;
+  align-items: center;
+  justify-content: center;
+}
+
+
+
+.contact-btn{
+  margin-top: 20px;
+  padding: 20px 23px;
+  font-size: 20px;
+  position: inherit;
+  border: none;
+  border-radius: 4px;
+  background-color: rgb(124, 115, 241);
+  color: white;
+  cursor: pointer;
+  opacity: 1;
+}
+
+.contact-btn:hover{ 
+  color: white;
+  opacity: 0.8;
+}
+
+
+
+
 }
