--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -300,8 +300,8 @@ a{
 }
 
 /* Footer Styles */
-.footer-container{
-}
+/* .footer-container{
+} */
 /* End of Footer Styles */
 footer{
   text-align:center;
