--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4,9 +4,36 @@
   box-sizing: border-box;
 }
 
+html{
+  scroll-behavior: smooth;
+}
+
 body{
   background:#f2f5f9;
 }
+
+/* Top Button Styling Start*/
+
+#topBtn {
+  display: none;
+  position: fixed;
+  bottom: 20px;
+  right: 30px;
+  z-index: 99;
+  font-size: 18px;
+  border: none;
+  outline: none;
+  background-color: rgb(18, 48, 78);
+  color: white;
+  cursor: pointer;
+  padding: 15px;
+  border-radius: 4px;
+}
+
+#topBtn:hover {
+  background-color: #555;
+}
+/* End of Top Button Style */
 
 /* All Link Styles */
 a{
@@ -26,6 +53,7 @@ a{
 .top{
   display: flex;
   justify-content: space-between;
+  height: 34vh;
 }
 
 .top h1{
@@ -38,6 +66,12 @@ a{
   align-content: center;
   height: 30vh;
   cursor: pointer;
+  position: fixed;
+}
+
+.top nav{
+  position: fixed;
+  right: 0;
 }
 
 .top h1:hover{
@@ -190,6 +224,7 @@ a{
 .about-me{
   text-align: center;
   height: 100vh;
+  /* background-image: linear-gradient(100deg, wheat, red); */
 }
 
 .about {
@@ -202,6 +237,8 @@ a{
  
 .about h4{
   font-size: 5rem;
+  margin-top: 133px;
+
 }
 
 .section-3{
@@ -216,6 +253,66 @@ a{
   font-size: 1.9rem;
   word-wrap:wrap;
 }
+/* End of About */
+
+/* My Project Styling Start */
+
+
+.project_cards{
+  display: flex;
+  justify-content: center;
+  gap: 40px;
+  /* border-bottom: 4px solid red; */
+  padding: 17px;
+  height: 100vh;
+  margin-top: 200px;
+}
+
+.project-description{
+  width: 400px;
+}
+
+.project-description h1{
+  padding: 12px;
+}
+
+.project-description p{
+  margin-top: 12px;
+  height: 130px;
+}
+
+.project-description i{
+  margin-top: 12px;
+}
+
+.project-description .right-icon{
+  margin-left: 70px;
+}
+
+.card{
+  height: 400px;
+  width: 400px;
+  border: 4px solid blue;
+}
+.cards img{
+  width: 600px;
+  height: 330.75px;
+  border-radius: 4px;
+  cursor: pointer;
+  -webkit-filter: brightness(70%);
+  -webkit-transition: all 1s ease;
+  -moz-transition: all 1s ease;
+  -o-transition: all 1s ease;
+  -ms-transition: all 1s ease;
+  transition: all 1s ease; 
+  display: block;
+  margin-top: 80px;
+}
+
+.cards img:hover{
+  -webkit-filter: brightness(100%);
+}
+/* My Project Styling End */
 
 .my_links{
   display: flex;
@@ -335,7 +432,9 @@ footer{
 
 .contact-form{
   box-shadow: 2px 2px 12px rgba(0,0,0,0.2);
-  background-color: rgb(147, 142, 221);
+  /* background-color: rgb(147, 142, 221); */
+  background-image: linear-gradient(120deg, pink, rgb(131, 89, 963));
+
   padding: 29px;
   display: flex;
   flex-direction: row;
@@ -349,26 +448,41 @@ footer{
 .contact-form-section-1 input[type=email]{
   font-family: cursive;
   height: 98px;
-  /* margin: 30px; */
-  border-bottom: 1px solid #15598f;
-  /* border: none; */
+  border: 1px solid #ccc;
   flex-wrap: nowrap;
   font-size: 23px;
   padding: 7px;
   margin-right: 23px;
+  box-sizing: border-box;
+  background-color: rgb(73, 66, 66);
+  color: #fff;
+  border: 4px solid #dddddd;
 
 }
+
+.contact-form-section-1 input[type=text]:focus,
+.contact-form-section-1 input[type=email]:focus,
+.contact-form-section-2 .message:focus{
+  font-family: cursive;
+  /* background: #fff; */
+  /* color: #000; */
+}
+
 .contact-form-section-2 .message{
   font-family: cursive;
-  width: 270px;
-  max-width: 300px;
-  height: 190px;
+  width: 400px;
+  max-width: 450px;
+  height: 197px !important;
   max-height: 200px;
   border: none;
   padding: 12px 12px 0px 10px;
-  margin-top: 54px;
+  margin-top: 65px !important;
   font-size: 19px;
   text-transform: capitalize;
+  background-color: rgb(73, 66, 66);
+  color: #fff;
+  border: 4px solid #dddddd;
+
 }
 
 .contact-btn{
@@ -377,14 +491,14 @@ footer{
   font-size: 20px;
   position: relative;
   top: 180px;
-  right: 273px;
+  right: 420.9px;
   flex-direction: column;
   border: none;
   border-radius: 4px;
   background-color: rgb(124, 115, 241);
   color: white;
   cursor: pointer;
-  opacity: 1;
+  opacity: 0.8;
   font-weight: 700;
   font-family: monospace;
 }
@@ -392,6 +506,7 @@ footer{
 .contact-btn:hover{ 
   color: white;
   opacity: 0.8;
+  background-image: linear-gradient(120deg, rgb(131, 89, 963), pink);
 }
 
 
