--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -23,7 +23,8 @@ body{
   font-size: 18px;
   border: none;
   outline: none;
-  background-color: rgb(18, 48, 78);
+  background-color: #15598f;
+  opacity: 1.6;
   color: white;
   cursor: pointer;
   padding: 15px;
@@ -31,7 +32,7 @@ body{
 }
 
 #topBtn:hover {
-  background-color: #555;
+  opacity: 0.8;
 }
 /* End of Top Button Style */
 
@@ -77,7 +78,7 @@ a{
 }
 
 #high{
-  background-color: rgba(148, 89, 121, 0.2);
+  /* background-color: rgba(148, 89, 121, 0.2); */
   /* opacity: 0.6; */
   height: 90px;
   width: 100vw;
@@ -140,6 +141,69 @@ a{
 
 /* End of Animation Styling */
 
+/* START OF STATISTICS STYLING */
+
+.stat-container{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 23px;
+  height: 100vh;
+}
+
+.flip-card {
+  flex: 0 32%;
+  background-color: transparent;
+  width: 250px;
+  height: 250px;
+  perspective: 1000px;
+  flex-basis: 25%;
+  flex-grow: 0;
+  margin-top: 233px;
+}
+
+.flip-card-inner {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  transition: transform 0.6s;
+  transform-style: preserve-3d;
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+}
+
+.flip-card:hover .flip-card-inner {
+  transform: rotateY(180deg);
+}
+
+.flip-card-front, .flip-card-back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+}
+
+.flip-card-front {
+  color: black;
+}
+
+.flip-card-front h1{
+  margin-top: 100px;
+}
+
+.flip-card-back {
+  background-color: #2980b9;
+  color: white;
+  transform: rotateY(180deg);
+}
+
+.flip-card-back h1{
+  margin-top: 100px;
+  padding-bottom: 5px;
+}
+
+/* END OF STATISTICS STYLING */
 
 .top-link ul{
   list-style: none;
@@ -156,6 +220,7 @@ a{
   color: #fff;
   margin: 6px;
   padding: 5px 5px;
+  font-weight: 800;
 }
 
 .top-link ul a:hover{
@@ -207,7 +272,7 @@ a{
 
 .section-two{
   position: relative;
-  top: 20px;
+  top: 50px;
 }
 
 .intro-1 .section-two strong{
@@ -233,6 +298,56 @@ a{
   transform: rotate(1deg);
   transition: all 9s ease;
 }
+/* End of Image */
+
+/* Testimonial Styling */
+
+.sections{
+  display: flex;
+  /* background-color: red; */
+  justify-content: space-evenly;
+  height: 100vh;
+  margin-top: 23px;
+}
+
+
+.testimony-card{
+  /* height: 100vh; */
+  width: 300px;
+  padding: 23px;
+  align-items: center;
+  margin-top: 50%;
+}
+
+
+.testimony-card img{
+  width: 150px;
+  height: 149px;
+  border-radius: 50%;
+}
+
+.next-test-btn{
+  position: relative;
+  bottom: 123px;
+  display: block;
+  margin-right: auto;
+  margin-left: auto;
+  height: 50px;
+  width: 50px;
+  border-radius: 50%;
+  border: none;
+  background-color: #15598f;
+  color: white;
+  font-size: 23px;
+  outline: none;
+  cursor: pointer;
+}
+
+.next-test-btn:hover {
+  opacity: 0.8;
+}
+
+/* End Testimonial Styling */
 
 /* About Section Styling */
 
@@ -438,23 +553,22 @@ footer{
 /* Subscribe Section */
 .contact-form-heading{
   font-size: 3rem;
-  color: rgb(63, 57, 150);
-  font-weight: 600;
+  color: #15598f;
+  /* color: rgb(63, 57, 150); */
+  font-weight: 900;
   position: relative;
-  bottom: 90px;
-  left: 50%;
+  bottom: 40px;
+  left: 67%;
 }
 
 .contact-form{
-  box-shadow: 2px 2px 12px rgba(0,0,0,0.2);
+  /* box-shadow: 2px 2px 12px rgba(0,0,0,0.2); */
   /* background-color: rgb(147, 142, 221); */
-  background-image: linear-gradient(120deg, pink, rgb(131, 89, 963));
-
+  /* background-image: linear-gradient(120deg, pink, rgb(131, 89, 963)); */
   padding: 29px;
   display: flex;
   flex-direction: row;
   height: 110vh;
-  
   align-items: center;
   justify-content: center;
 }
@@ -469,8 +583,9 @@ footer{
   padding: 7px;
   margin-right: 23px;
   box-sizing: border-box;
-  background-color: rgb(73, 66, 66);
-  color: #fff;
+  /* background-color: rgb(73, 66, 66); */
+  /* color: #fff; */
+  color: rgb(73, 66, 66);
   border: 4px solid #dddddd;
 
 }
@@ -494,8 +609,8 @@ footer{
   margin-top: 65px !important;
   font-size: 19px;
   text-transform: capitalize;
-  background-color: rgb(73, 66, 66);
-  color: #fff;
+  /* background-color: rgb(73, 66, 66); */
+  color: rgb(73, 66, 66);
   border: 4px solid #dddddd;
 
 }
@@ -510,10 +625,11 @@ footer{
   flex-direction: column;
   border: none;
   border-radius: 4px;
-  background-color: rgb(124, 115, 241);
+  /* background-color: rgb(124, 115, 241); */
+  background-color: #15598f;
   color: white;
   cursor: pointer;
-  opacity: 0.8;
+  opacity: 1.6;
   font-weight: 700;
   font-family: monospace;
 }
@@ -521,7 +637,7 @@ footer{
 .contact-btn:hover{ 
   color: white;
   opacity: 0.8;
-  background-image: linear-gradient(120deg, rgb(131, 89, 963), pink);
+  /* background-image: linear-gradient(120deg, rgb(131, 89, 963), pink); */
 }
 
 
