Added More Testimonial and Fix Typography

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -94,6 +94,15 @@ a{
   transform: rotate(50deg);
 }
 
+#stat-link{
+  color: white;
+  font-size: 23px;
+  margin-top: 12px;
+  /* background-color: black; */
+  width: 100%;
+  height: 100px;
+}
+
 #myskill{
   font-size: 18px;
   position: relative;
@@ -228,7 +237,7 @@ a{
   padding: 5px 5px;
 }
 .hr{
-  color: red !important;
+  color: white;
   width: 100%;
 }
 .top-link .collapse-icon{ 
@@ -495,14 +504,11 @@ a{
 
 .subscribe-form input{
   padding: 9px 12px;
-  font-size:26px;
-  border-color: brown;
+  font-size:18px;
 }
 
 .subscribe-form input:focus{
-  background-color: #333;
-  color:#fff;
-  border: none;
+  color:#333;
   outline: none ;
 
 }
@@ -510,7 +516,7 @@ a{
 .subscribe-btn{
   margin-top: 25px;
   border: none;
-  background-color: rgb(187, 93, 93);
+  background-color: #15598f;
   color: white;
   font-size: 19px;
   cursor: pointer;
