--- a/assets/css/m-q.css
+++ b/assets/css/m-q.css
@@ -1,19 +1,79 @@
-@media only screen and (max-width: 768px) {
-  .container{
-    /* height: 70vh; */
-    display: flex;
-    flex-direction: column;
-    justify-items: center;
-    align-content: center;
-    align-items: center;
-    flex-wrap: nowrap;
+@media only screen and (max-width: 600px) {
+  *{
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
   }
+
+  .intro-1{
+    margin-top: 25px;
+  }
+
+  .intro-1 section span{
+    display: none;
+  }
+
+  .intro-1 .section-two strong{
+    position: relative;
+    bottom: 34px;
+  }
+  .top-header{
+    height: 90%;
+  }
+
+  #testimonial-heading{
+    top: 23px;
+    left: 0rem;
+    padding: 17px;
+  }
+
+  .testimony-card{
+    align-items: center;
+    margin-top: 100%;
+  }
+
+  .sections,
+ .testimonial .sections{
+   height: fit-content !important;
+ }
+
+  .container, h1, ul, hr{
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden; 
+  }
+
+  #project-section-2{
+    margin-top: 20rem;
+    margin-bottom: 12px;
+  }
+  .project_cards{
+    margin-top: 10rem;
+    
+  }
+  
+ 
+  
+  .top-header{
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+  }
+
+  .top{
+    height: 12vh;
+  }
+
   .top h1{
     display: none;
   }
-    
+  
+  .h{
+    padding: 15px;
+    font-size: 36px;
+  }
   .top-link{
-      display:none;
+      display: none;
     }
 
   .top-link ul{
@@ -32,7 +92,8 @@
   .Show {
       display: flex;
     }
-      
+  
+         
   .link-toggle {
       align-self: flex-end;
       display: initial;
@@ -48,9 +109,149 @@
     display: block;
     padding-left: 0px;
   }
+
+  /* Statistics Cards */
+  .stat-container{
+    display: block;
+    margin-top: 123px;
+  }
+
+  .stat-label{
+    margin-top: 50px;
+  } 
+
+  .flip-card {
+    display: block;
+    margin: 0 auto;
+    padding: 15px;
+  }
+
+  #my_projects{
+    margin-top:80px;
+  }
+
+/* >>>>> Make the test align at the center <<<<< */
+  #card-2-h1{
+    margin-top: 25px;
+    
+  }
+
+  .next-button-sta{
+    display: none;
+  }
+  
+  /* >>>>>>>> My Projects <<<<<<<< */
+
+  /* >>> Removing User Assistance smooth button */
+  .fa-chevron-down, .next-test-btn{
+    display: none !important;
+  }
+
+  .project_cards{
+    display: block;
+    /* height: 25vh; */
+  }
+
+  .project-card-1{
+    margin-top: 23px;
+  }
+
+  .cards{
+    display: flex;
+    flex-direction: column;
+  }
+
+  .cards img{
+    width: 280px;
+    height: 200px;
+    display: block;
+    margin: 0 auto;
+  }
+
+  .cards h1{
+    font-weight:700;
+  }
+
+  hr{
+    display: none;
+  }
+
+  .project_cards img{
+    position: relative;
+    top: 23px;
+  }
+
+  .project-description{
+    padding: 19px;
+    width: 100%;
+    text-align: center;    
+  }
+
+  .project-description p{
+    display: block;
+    margin: 0 auto;
+    padding: 12px;
+    width: 70%;
+  }
+
+  .project-description i{
+    position: relative;
+  }
+
+  #project-section-2{
+    margin-top: 24rem;
+  }
+
+  i.fas.fa-sitemap.right-icon.todo-link{
+    margin-top: 90px;
+  }
+
+  .project-link .cake-link{
+    margin-top: 35px;
+  }
+
+  .project-link .baybot-link{
+    margin-top: 5rem;
+  }
+
+  /* >>>>>> Making the section takes a column form <<<<<< */
+  .sections{
+    display: block;
+    margin-top: 15em;
+  }
+
+  #testimonial{
+    margin-top: 23rem;
+  }
+
+  .testimony-card{
+    display: block;
+    margin: 0 auto;
+    position: relative;
+    height: auto;
+  }
+
+  .testimony-card img{
+    display: block;
+    margin: 0 auto;
+  }
+
+  .about-me{
+    margin-top: 25%;
+    margin-bottom: 25%;
+  }
+  .testimony-card h3{
+    margin-top: 12px;
+  }
+
   .about{
     margin: 0;
   }
+
+  .about-me{
+    height: 90vh;
+  }
+
   .about-me h4{
     font-size:58px;
     text-align: center;
@@ -67,15 +268,21 @@
     display: block;
     margin-right: auto;
     margin-left: auto;
-    width: 90%;
+    width: 60%;
+    height: 60%;
   }
 
+  /* Moment's Heading */
+  #moments{
+    margin-top: 200px !important;
+  }
   .section-3{
     width: 100%;
     height: 100%;
     text-align:center;
     left: 0rem;
     top: 0rem;
+    padding: 12px;
   }
 
   .section-3 strong{
@@ -91,25 +298,84 @@
     display: contents;
   }
 
+  .hire-me-form{
+    position: relative;
+    top: 55px;
+  }
+
+  .hire-form{
+    text-align: center;
+    display: block;
+    height: 100%;
+  }
+
+  .hire-form-heading{
+    position: static;
+    margin-bottom: 23px;
+  }
+
+  .hire-form input[type=text],
+  .hire-form input[type=email]{
+    display: block;
+    margin: 0 auto;
+    font-size: 21px;
+  }
+
+  .hire-form-section-2 .message{
+    width: 300px;
+  }
+
+  .hire-btn{
+    top: 0px;
+    right: 0px;
+    margin: 12px;
+  }
+
   .my_links{
-    display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
-    align-content: center;
-    justify-items: center;
     padding: 4px;
-    font-size: 20px;
-    padding-left: 46px;
-    gap: 12px;
+    font-size: 18px;
+    margin-left: 12px;
+    margin-top: 5rem;
+  }
+
+  .my_links ul{
+    margin: 0 auto;
+  }
+
+  .my_links a{
+    font-weight: 700px;
+  }
+
+  .my_links h4{
+    position: static;
+    text-align: center;
+  }
+
+  .more-contact{
+    /* >>> To Align The Mail To the center <<< */
+    left: -4px;
+  }
+
+  .form{
+    text-align: center;
+    margin-top: 20px;
+  }
+
+  .subscribe-form h4{
+    font-size: 33px;
+    color: #15589f; 
+    padding: 12px;  
   }
 
   .subscribe-form input{
     width: 89%;
     padding-top: 23px;
     padding-right: 29px;
-    border: 2px solid brown;
-    
+    border: 2px solid #15589f;
+    margin: 15px;
+    margin-top: 15px;
   }
   .subscribe-btn{
     margin-top: 20px;
@@ -117,7 +383,7 @@
     margin-right: auto;
     margin-left: auto;
     border-radius: 6px;
-    background-color: burlywood;
+    background-color: #15589f;
   }
 
 
@@ -147,7 +413,6 @@
 }
 
 
-
 .contact-btn{
   margin-top: 20px;
   padding: 20px 23px;
@@ -165,8 +430,160 @@
   color: white;
   opacity: 0.8;
 }
+}
+
+@media only screen and (max-width: px){
+  body{
+    background: red !important;
+  }
+
+  .project_cards{
+    margin-top: 30px;
+  }
+
+  .cards img{
+    margin: 0 auto;
+  }
+
+  .next-test-btn, .next-button-sta, .fa-chevron-down{
+    /* display: none; */
+  }
+
+  #project-section-2-btn{
+    bottom: 160px !important;
+  }
+
+  #testimonial-section-btn{
+    top: 89px;
+  }
+
+  .testimony-card{
+    top: 120px;
+    height: 100%;
+  }
+
+  .top-link ul{
+    margin-right: 100px;
+  }
 
 
+  .hire-btn{
+    right: 396.9px;
+  }
 
+  .subscribe-btn{
+    margin-top: 0px;
+    margin-left: 9px;
+  }
+
+  .project-description p{
+    width: 100%;
+  }
+
+  .project-description i{
+    position: relative;
+    bottom: 0px;
+    padding: 12px;
+  }
+
+  #section2,
+  #section3{
+    margin-top: 16rem;
+    margin-bottom: 13rem;
+  }
+  .testimonial .section{
+    display: block;
+    margin-top: 10em;
+    height: 80vh;
+  }
+  .subscribe-btn{
+    display: block;
+    margin: 0 auto;
+  }
+}
+/* Motorola Like Layout */
+@media only screen and (max-width: px){
+  .intro-1{
+    margin-top: 25px;
+  }
+
+  .intro-1 section span{
+    display: none;
+  }
+
+  .intro-1 .section-two strong{
+    position: relative;
+    bottom: 34px;
+  }
+  .top-header{
+    height: 90%;
+  }
+
+ .testimony-card{
+   top: 200px;
+ }
+
+ .sections,
+ .testimonial .sections{
+   height: fit-content !important;
+ }
+  body{
+    background: orange !important;
+  }
+
+  #project-section-2{
+    margin-top: 20rem;
+    margin-bottom: 12px;
+  }
+  .project_cards{
+    margin-top: 10rem;
+    
+  }
+  
+  #section2,
+  #section3{
+    position: relative;
+    bottom: 12rem;
+  }
 
 }
+
+/* iphone layout */
+@media only screen and (max-width: px){
+  body{
+    color: black;
+  }
+  .testimony-card{
+    top: 20rem;
+  }
+  #project-section-2{
+    margin-top: 20rem;
+    margin-bottom: 14px;
+  }
+  .project-description i{
+    top: 2rem;
+  }
+  .project_cards{
+    margin-top: 10rem;
+    
+  }
+  
+  #section2,
+  #section3{
+    position: relative;
+    top: 13rem;
+    bottom: 12rem;
+  }
+
+  .mide{
+    margin-top: 22rem;
+  }
+  .alagbe{
+    margin-top: 4rem;
+  }
+
+  #about-me{
+
+  }
+}
+
