Fix layout compatibility and add support for smaller device navbar

--- a/assets/css/loader.css
+++ b/assets/css/loader.css
@@ -30,7 +30,8 @@
   bottom: 5px;
   border-radius: 50%;
   border: 3px solid transparent;
-  border-top-color: #e74c3c;
+  /* border-top-color: #e74c3c; */
+  border-top-color: #fff;
   -webkit-animation: spin 3s linear infinite; /* Chrome, Opera 15+, Safari 5+ */
     animation: spin 3s linear infinite; /* Chrome, Firefox 16+, IE 10+, Opera */
 }
@@ -44,7 +45,8 @@
   bottom: 15px;
   border-radius: 50%;
   border: 3px solid transparent;
-  border-top-color: #f9c922;
+  /* border-top-color: #f9c922; */
+  border-top-color: rgb(5, 170, 5);
   -webkit-animation: spin 1.5s linear infinite; /* Chrome, Opera 15+, Safari 5+ */
     animation: spin 1.5s linear infinite; /* Chrome, Firefox 16+, IE 10+, Opera */
 }
