Clean Up and Comments

--- a/assets/css/hamburger.css
+++ b/assets/css/hamburger.css
@@ -1,3 +1,4 @@
+/* Hamurger Parent Container Menu */
 .hamburger-container .menu {
   position: absolute;
   right: -100px;
@@ -14,6 +15,8 @@
   overflow-x: hidden;
 }
 
+/* Hamurger Parent Container with Hamburger class styling*/
+
 .hamburger-container .hamburger {
   position: absolute;
   top: 135px;
@@ -28,6 +31,8 @@
   transition: .5s ease-in-out;
   
 }
+
+/* Creating fake shapes before and after the hamburger class */
 
 .hamburger-container .hamburger:after, .hamburger-container .hamburger:before {
   -webkit-transition: .5s ease-in-out;
@@ -68,6 +73,8 @@
   top: 0;
 }
 
+/* hidding the input type check tag */
+
 .hamburger-container input:checked + .menu + ul { opacity: 1; }
 
 .hamburger-container ul {
@@ -97,11 +104,4 @@
 .hamburger-container a:hover {
   background: #151515;
   color: #fff
-}
-
-
-@media only screen and (max-width: 600px){
-  .hamburger-container .menu{
-    display: ;
-  }
 }
