--- a/assets/css/m-q.css
+++ b/assets/css/m-q.css
@@ -138,308 +138,306 @@
     margin-top:80px;
   }
 
-/* >>>>> Make the test align at the center <<<<< */
-  #card-2-h1{
-    margin-top: 25px;
+  /* >>>>> Make the test align at the center <<<<< */
+    #card-2-h1{
+      margin-top: 25px;
+      
+    }
+
+    .next-button-sta{
+      display: none;
+    }
     
+    /* >>>>>>>> My Projects <<<<<<<< */
+
+    /* >>> Removing User Assistance smooth button */
+    .fa-chevron-down, .next-test-btn{
+      display: none !important;
+    }
+
+    .project_cards{
+      display: block;
+      /* height: 25vh; */
+    }
+
+    .project-card-1{
+      margin-top: 23px;
+    }
+
+    .cards{
+      display: flex;
+      flex-direction: column;
+    }
+
+    .cards img{
+      width: 280px;
+      height: 200px;
+      display: block;
+      margin: 0 auto;
+    }
+
+    .cards h1{
+      font-weight:700;
+    }
+
+    hr{
+      display: none;
+    }
+
+    .project_cards img{
+      position: relative;
+      top: 23px;
+    }
+
+    .project-description{
+      padding: 19px;
+      width: 100%;
+      text-align: center;    
+    }
+
+    .project-description p{
+      display: block;
+      margin: 0 auto;
+      padding: 12px;
+      width: 70%;
+    }
+
+    .project-description i{
+      position: relative;
+    }
+
+    #project-section-2{
+      margin-top: 24rem;
+    }
+
+    i.fas.fa-sitemap.right-icon.todo-link{
+      margin-top: 90px;
+    }
+
+    .project-link .cake-link{
+      margin-top: 35px;
+    }
+
+    .project-link .baybot-link{
+      margin-top: 5rem;
+    }
+
+    /* >>>>>> Making the section takes a column form <<<<<< */
+    .sections{
+      display: block;
+      margin-top: 15em;
+    }
+
+    #testimonial{
+      margin-top: 23rem;
+    }
+
+    .testimony-card{
+      display: block;
+      margin: 0 auto;
+      position: relative;
+      height: auto;
+    }
+
+    .testimony-card img{
+      display: block;
+      margin: 0 auto;
+    }
+
+    .about-me{
+      margin-top: 25%;
+      margin-bottom: 25%;
+    }
+    .testimony-card h3{
+      margin-top: 12px;
+    }
+
+    .about{
+      margin: 0;
+    }
+
+    .about-me{
+      height: 90vh;
+    }
+
+    .about-me h4{
+      font-size:58px;
+      text-align: center;
+      padding:12px;
+    }
+    .me{
+      flex-direction: column;
+      width: 100%;
+      /* padding:0px; */
+    }
+
+    .me img{
+      transition: none;
+      display: block;
+      margin-right: auto;
+      margin-left: auto;
+      width: 60%;
+      height: 60%;
+    }
+
+    /* Moment's Heading */
+    #moments{
+      margin-top: 200px !important;
+    }
+    .section-3{
+      width: 100%;
+      height: 100%;
+      text-align:center;
+      left: 0rem;
+      top: 0rem;
+      padding: 12px;
+    }
+
+    .section-3 strong{
+      display: contents;
+      text-align: center;
+      background: ;
+      justify-content: center;
+      width: 50px;
+      font-size: 20px;
+    }
+
+    .section-3 span{
+      display: contents;
+    }
+
+    .hire-me-form{
+      position: relative;
+      top: 55px;
+    }
+
+    .hire-form{
+      text-align: center;
+      display: block;
+      height: 100%;
+    }
+
+    .hire-form-heading{
+      position: static;
+      margin-bottom: 23px;
+    }
+
+    .hire-form input[type=text],
+    .hire-form input[type=email]{
+      display: block;
+      margin: 0 auto;
+      font-size: 21px;
+    }
+
+    .hire-form-section-2 .message{
+      width: 300px;
+    }
+
+    .hire-btn{
+      top: 0px;
+      right: 0px;
+      margin: 12px;
+    }
+
+    .my_links{
+      flex-direction: column;
+      justify-content: center;
+      padding: 4px;
+      font-size: 18px;
+      margin-left: 12px;
+      margin-top: 5rem;
+    }
+
+    .my_links ul{
+      margin: 0 auto;
+    }
+
+    .my_links a{
+      font-weight: 700px;
+    }
+
+    .my_links h4{
+      position: static;
+      text-align: center;
+    }
+
+    .more-contact{
+      /* >>> To Align The Mail To the center <<< */
+      left: -4px;
+    }
+
+    .form{
+      text-align: center;
+      margin-top: 20px;
+    }
+
+    .subscribe-form h4{
+      font-size: 33px;
+      color: #15589f; 
+      padding: 12px;  
+    }
+
+    .subscribe-form input{
+      width: 89%;
+      padding-top: 23px;
+      padding-right: 29px;
+      border: 2px solid #15589f;
+      margin: 15px;
+      margin-top: 15px;
+    }
+    .subscribe-btn{
+      margin-top: 20px;
+      display: block;
+      margin-right: auto;
+      margin-left: auto;
+      border-radius: 6px;
+      background-color: #15589f;
+    }
+
+  /* Subscribe Section */
+  .contact-form-heading{
+    font-size: 2rem;
+    color: rgb(63, 57, 150);
+    font-weight: 600;
+    bottom: 10px;
+    left: 20%;
   }
 
-  .next-button-sta{
-    display: none;
-  }
-  
-  /* >>>>>>>> My Projects <<<<<<<< */
-
-  /* >>> Removing User Assistance smooth button */
-  .fa-chevron-down, .next-test-btn{
-    display: none !important;
-  }
-
-  .project_cards{
-    display: block;
-    /* height: 25vh; */
-  }
-
-  .project-card-1{
-    margin-top: 23px;
-  }
-
-  .cards{
+  .contact-form{
+    box-shadow: 2px 2px 12px rgba(0,0,0,0.2);
+    background-color: rgb(147, 142, 221);
+    padding: 12px;
     display: flex;
     flex-direction: column;
-  }
-
-  .cards img{
-    width: 280px;
-    height: 200px;
-    display: block;
-    margin: 0 auto;
-  }
-
-  .cards h1{
-    font-weight:700;
-  }
-
-  hr{
-    display: none;
-  }
-
-  .project_cards img{
-    position: relative;
-    top: 23px;
-  }
-
-  .project-description{
-    padding: 19px;
+    height: 100vh;
     width: 100%;
-    text-align: center;    
-  }
-
-  .project-description p{
-    display: block;
-    margin: 0 auto;
-    padding: 12px;
-    width: 70%;
-  }
-
-  .project-description i{
-    position: relative;
-  }
-
-  #project-section-2{
-    margin-top: 24rem;
-  }
-
-  i.fas.fa-sitemap.right-icon.todo-link{
-    margin-top: 90px;
-  }
-
-  .project-link .cake-link{
-    margin-top: 35px;
-  }
-
-  .project-link .baybot-link{
-    margin-top: 5rem;
-  }
-
-  /* >>>>>> Making the section takes a column form <<<<<< */
-  .sections{
-    display: block;
-    margin-top: 15em;
-  }
-
-  #testimonial{
-    margin-top: 23rem;
-  }
-
-  .testimony-card{
-    display: block;
-    margin: 0 auto;
-    position: relative;
-    height: auto;
-  }
-
-  .testimony-card img{
-    display: block;
-    margin: 0 auto;
-  }
-
-  .about-me{
-    margin-top: 25%;
-    margin-bottom: 25%;
-  }
-  .testimony-card h3{
-    margin-top: 12px;
-  }
-
-  .about{
-    margin: 0;
-  }
-
-  .about-me{
-    height: 90vh;
-  }
-
-  .about-me h4{
-    font-size:58px;
-    text-align: center;
-    padding:12px;
-  }
-  .me{
-    flex-direction: column;
-    width: 100%;
-    /* padding:0px; */
-  }
-
-  .me img{
-    transition: none;
-    display: block;
-    margin-right: auto;
-    margin-left: auto;
-    width: 60%;
-    height: 60%;
-  }
-
-  /* Moment's Heading */
-  #moments{
-    margin-top: 200px !important;
-  }
-  .section-3{
-    width: 100%;
-    height: 100%;
-    text-align:center;
-    left: 0rem;
-    top: 0rem;
-    padding: 12px;
-  }
-
-  .section-3 strong{
-    display: contents;
-    text-align: center;
-    background: ;
+    align-items: center;
     justify-content: center;
-    width: 50px;
+  }
+
+
+  .contact-btn{
+    margin-top: 20px;
+    padding: 20px 23px;
     font-size: 20px;
+    position: inherit;
+    border: none;
+    border-radius: 4px;
+    background-color: rgb(124, 115, 241);
+    color: white;
+    cursor: pointer;
+    opacity: 1;
   }
 
-  .section-3 span{
-    display: contents;
+  .contact-btn:hover{ 
+    color: white;
+    opacity: 0.8;
   }
-
-  .hire-me-form{
-    position: relative;
-    top: 55px;
-  }
-
-  .hire-form{
-    text-align: center;
-    display: block;
-    height: 100%;
-  }
-
-  .hire-form-heading{
-    position: static;
-    margin-bottom: 23px;
-  }
-
-  .hire-form input[type=text],
-  .hire-form input[type=email]{
-    display: block;
-    margin: 0 auto;
-    font-size: 21px;
-  }
-
-  .hire-form-section-2 .message{
-    width: 300px;
-  }
-
-  .hire-btn{
-    top: 0px;
-    right: 0px;
-    margin: 12px;
-  }
-
-  .my_links{
-    flex-direction: column;
-    justify-content: center;
-    padding: 4px;
-    font-size: 18px;
-    margin-left: 12px;
-    margin-top: 5rem;
-  }
-
-  .my_links ul{
-    margin: 0 auto;
-  }
-
-  .my_links a{
-    font-weight: 700px;
-  }
-
-  .my_links h4{
-    position: static;
-    text-align: center;
-  }
-
-  .more-contact{
-    /* >>> To Align The Mail To the center <<< */
-    left: -4px;
-  }
-
-  .form{
-    text-align: center;
-    margin-top: 20px;
-  }
-
-  .subscribe-form h4{
-    font-size: 33px;
-    color: #15589f; 
-    padding: 12px;  
-  }
-
-  .subscribe-form input{
-    width: 89%;
-    padding-top: 23px;
-    padding-right: 29px;
-    border: 2px solid #15589f;
-    margin: 15px;
-    margin-top: 15px;
-  }
-  .subscribe-btn{
-    margin-top: 20px;
-    display: block;
-    margin-right: auto;
-    margin-left: auto;
-    border-radius: 6px;
-    background-color: #15589f;
-  }
-
-
-
-
-  
-
-/* Subscribe Section */
-.contact-form-heading{
-  font-size: 2rem;
-  color: rgb(63, 57, 150);
-  font-weight: 600;
-  bottom: 10px;
-  left: 20%;
-}
-
-.contact-form{
-  box-shadow: 2px 2px 12px rgba(0,0,0,0.2);
-  background-color: rgb(147, 142, 221);
-  padding: 12px;
-  display: flex;
-  flex-direction: column;
-  height: 100vh;
-  width: 100%;
-  align-items: center;
-  justify-content: center;
 }
 
 
-.contact-btn{
-  margin-top: 20px;
-  padding: 20px 23px;
-  font-size: 20px;
-  position: inherit;
-  border: none;
-  border-radius: 4px;
-  background-color: rgb(124, 115, 241);
-  color: white;
-  cursor: pointer;
-  opacity: 1;
-}
 
-.contact-btn:hover{ 
-  color: white;
-  opacity: 0.8;
-}
-}
-
+/* Use this to target other devices*/
 @media only screen and (max-width: px){
   body{
     background: red !important;
