--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -10,8 +10,13 @@ html{
 
 body{
   background:#f2f5f9;
+  overflow-x: hidden;
 }
 
+button{
+  outline:none;
+  border: none;
+}
 /* >>>>>>>> Top Button Styling Start <<<<<<<< */
 #topBtn {
   display: none;
@@ -291,6 +296,9 @@ h1#logo{
   margin-top: 100px;
   padding-bottom: 5px;
 }
+.flip-card-back #python_txt{
+  margin-top: 50px;
+}
 
 /* >>>>>>>> END OF STATISTICS STYLING <<<<<<<< */
  
@@ -304,13 +312,15 @@ h1#logo{
 }
 
 .me img{
-  border-radius: 50%;
+  /* border-radius: 50%; */
   width: 300px;
   height: 300px;
-  transform: rotate(1deg);
-  transition: all 9s ease;
+  border: 1em solid #f2f5f9;
+  border-bottom: 4em solid #f2f5f9;
+  border-radius: .25em;
+  box-shadow: 1em 1em 2em .25em rgba(0,0,0,.2);
+  transform: rotateZ(-2deg);
 }
-
 /* >>>>>>>> End of Image <<<<<<<< */
  
 
@@ -346,9 +356,15 @@ h1#logo{
 }
 
 .testimony-card img{
-  width: 150px;
-  height: 149px;
+  width: 250px;
+  height: 249px;
   border-radius: 50%;
+  border: 1em solid #f2f5f9;
+  border-bottom: 4em solid #f2f5f9;
+  border-radius: .25em;
+  box-shadow: 1em 1em 2em .25em rgba(0,0,0,.2);
+  /* transform: rotateZ(-2deg); */
+  margin-bottom: 13px;
 }
 
 .next-test-btn{
@@ -425,15 +441,17 @@ h1#logo{
 
 .project-description{
   width: 400px;
+  text-align: center;
 }
 
 .project-description h1{
-  padding: 12px;
+  margin-top: 19px;
 }
 
 .project-description p{
   margin-top: 12px;
   height: 130px;
+  font-size: 17px;
 }
 
 .project-description i{
@@ -477,9 +495,21 @@ h1#logo{
 .my_links{
   display: flex;
   position: relative;
-  padding-left: 5rem;
   padding-top: 50px;
+  right: 100px;
 }
+
+/* Contact me and News Letter Headings */
+.my_links h4{
+  position: relative;
+  bottom: 5rem;
+  left: 13.2rem;
+  color: #158;
+  font-size: 1.8em;
+  white-space: nowrap;
+  font-weight: 100;
+}
+
 
 .my_links ul{
   list-style:none;
@@ -492,6 +522,7 @@ h1#logo{
   cursor: pointer !important;
   color: #888888 !important;
   border-radius: 3px;
+  font-size: 19px;
 }
 
 .my_links a:hover{
@@ -516,31 +547,23 @@ h1#logo{
  
 .subscribe-form{
   display: flex;
-  gap: 6px;
-  padding-left: 1rem !important;
-  padding-top: -23px;
-  margin-bottom: 23px;
+  position: relative;
+  right: 100px;
+  overflow: hidden;
+  gap: 10px;  
+  margin-top: 10px;
 }
 
-/* Contact me and News Letter Headings */
-.my_links h4{
-  position: relative;
-  bottom: 5rem;
-  left: 18rem;
-  color: #158;
-  font-size: 1.4em;
-  white-space: nowrap;
-  font-weight: 100;
-}
 
 .subscribe-form span{
   font-size: 21px;
-  padding: 12px;
+  position: relative;
 }
 
 .subscribe-form input{
   padding: 9px 12px;
   font-size:18px;
+  margin-top: 20px;
 }
 
 .subscribe-form input:focus{
@@ -550,7 +573,7 @@ h1#logo{
 }
 
 .subscribe-btn{
-  margin-top: 25px;
+  margin-top: 45px;
   border: none;
   background-color: #15598f;
   color: white;
@@ -574,10 +597,11 @@ h1#logo{
 
 .more-contact{
   color:rgb(19, 29, 36);
-  position: relative;
-  left: 13.3%;
   font-size: 19px;
-  margin: 43px;
+  position: relative;
+  left: 6.7rem;
+  width: fit-content;
+  margin-top: 20px;
 }
 
 
@@ -589,8 +613,8 @@ h1#logo{
   color: #15598f;
   font-weight: 900;
   position: relative;
-  bottom: 40px;
-  left: 67%;
+  bottom: 70px;
+  left: 300px;
 }
 
 .hire-form{
@@ -614,7 +638,6 @@ h1#logo{
   box-sizing: border-box;
   color: rgb(73, 66, 66);
   border: 4px solid #dddddd;
-
 }
 
 .hire-form-section-1 input[type=text]:focus,
@@ -645,7 +668,7 @@ h1#logo{
   font-size: 20px;
   position: relative;
   top: 180px;
-  right: 400.9px;
+  right: 400px;
   flex-direction: column;
   border: none;
   border-radius: 4px;
@@ -654,6 +677,7 @@ h1#logo{
   cursor: pointer;
   opacity: 1.6;
   font-weight: 700;
+  margin-top: 12px;
   font-family: monospace;
 }
 
@@ -667,6 +691,11 @@ h1#logo{
 
 /* >>>>>>>> Footer Styles <<<<<<<< */
 
+.footer-container{
+  position: relative;
+  /* bottom: 90px; */
+}
+
  
 footer{
   text-align:center;
@@ -674,7 +703,7 @@ footer{
   font-family: cursive;
   font-weight: 100;
   padding-top: 40px;
-  height: 19vh;
+  margin: 30px;
   color: #157;
 }
 
