--- a/assets/css/hamburger.css
+++ b/assets/css/hamburger.css
@@ -87,6 +87,11 @@
   opacity: 0;
   -webkit-transition: .25s 0s ease-in-out;
   transition: .25s 0s ease-in-out;
+  list-style-type: none;
+}
+
+#links{
+  display: none;
 }
 
 .hamburger-container a {
