--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -274,6 +274,7 @@ h1#logo{
 }
 
 .flip-card-front, .flip-card-back {
+  cursor: pointer;
   position: absolute;
   width: 100%;
   height: 100%;
@@ -339,7 +340,7 @@ h1#logo{
 #testimonial-heading{
   text-align: center;
   color: #2980b9;
-  font-size: 29px;
+  font-size: 2.3rem;
   position: relative;
   bottom: 23px;
   left: 20rem;
@@ -471,8 +472,11 @@ h1#logo{
   border: 4px solid blue;
 }
 .cards img{
-  width: 500px;
+  /* width: 350px;
+  height: 250px; */
+  /* width: 500px; */
   height: 250.75px;
+  width: 400px;
   border-radius: 4px;
   cursor: pointer;
   filter: brightness(70%);
